- Added new actions "Hide" and "Reveal" which allow direct setting of objects' visibility setting instead of
	toggling it.
- Added support for logoed studs, this should satisfy Steffen. :p
- Added support for '0 BFC CLIP' and '0 BFC NOCLIP' and added auto-correction from errorneous MLCAD
	syntax ('0 BFC CERTIFY CLIP').
- Increased the amount of recent file slots from 5 to 10.
- The viewport now uses 7 sets of rotation/pan/zoom values, one for each camera. Changing these values
	in one camera no longer affects other cameras.
- When an external program is attempted to be used without a binary path defined, one will be asked
	with an input dialog instead of being told to go to configuration to set the path.
- When adding edges with Intersector (which is done with Isecalc), the user is prompted for Isecalc's
	path now as well if necessary instead of just ignoring it and not adding the edgelines.
- Added a configuration option for line anti-aliasing.
- BFC red/green view and black edges no longer default to true.
- If the vertex snapper finds a vertex closer than 4 pixels, it likely is the vertex being looked for
	and the algorithm can terminate early, hopefully this will save a few cycles on large parts.
- The camera icons now draw real tooltips instead of emulated ones.
- Color icon border now reflects the color's edge color.
- [Linux] Fixed: If an external program is attempted to be launched requiring Wine but with Wine missing,
	there was no error message and instead LDForge took this as no output from the program.
- Fixed: LDForge would sometimes crash during startup over uninitialized data in the GL renderer.
- Fixed: The message log was still written with black text with dark backgrounds.

=================================================
== Changes in version 0.2
=================================================

- Completely rewrote history (undo/redo) code, making it a LOT stabler in the process.
- Added ability to snap to pre-existing vertices while drawing.